RV-667 - checklist_toyopar_HATCH - correçao fotos inspeçao sobrepondo conteudo

--- a/Checklist_toyopar_SEDAN.html
+++ b/Checklist_toyopar_SEDAN.html
@@ -2325,8 +2325,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
         <!-- Coluna 2 -->
         <div class="basis-4/5">
           <h1 class="text-center font-medium uppercase text-md">
-            Folha de testeee Inspeção - Condições de Entrada e Saída do Veículo
-            - Sedan
+            Folha de Inspeção - Condições de Entrada e Saída do Veículo - Sedan
           </h1>
         </div>
       </div>
