RV-667 - checklist_toyopar_PICK-UP - correçao fotos inspeçao sobrepondo conteudo

--- a/Checklist_toyopar_PICK-UP.html
+++ b/Checklist_toyopar_PICK-UP.html
@@ -5,7 +5,7 @@
       name="viewport"
       content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
     />
-    <title>RAVPRO PICK-UP v1.4.23</title>
+    <title>RAVPRO PICK-UP 3.3.7</title>
     <style>
       /* Formulario Starter */
 
