RV-667-checklist-toyopar-SUV - correçao TAG responsavel

--- a/Checklist_toyopar_PICK-UP.html
+++ b/Checklist_toyopar_PICK-UP.html
@@ -9143,7 +9143,7 @@ Constrain images and videos to the parent width and preserve their intrinsic asp
                 maxlength="20"
                 rows="1"
               >
-##NOMECONSULTOR##</textarea
+##1000##</textarea
               >
             </div>
             <div
